# autoresearch-materials

./: .gitignore  README.md  apr13_results.tsv  findings.md  guidance.md  prepare.py  program.md  pyproject.toml  train.py
